[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nebulauth-sdk"
version = "0.1.0"
description = "Python SDK for NebulAuth runtime API"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "NebulAuth" }]
dependencies = [
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["nebulauth_sdk*"]
